--- a/index-2.html
+++ b/index-2.html
@@ -102,165 +102,181 @@
           </ul>
         </div>
       </div><!--./ card  -->
-      <div class="card border-0 mb-3">
-        <img src="assets/img/320x200/320x200-j16.jpg" alt="">
-        <div class="card-block plr-0">
-          <h3 class="card-title">在新三板收益率达126%，秘诀是这三套模型</h3>
-          <p class="card-text text-muted">同系资本到底有什么投资秘诀？</p>
+      <div class="card post-card card-inverse mb-3">
+        <div class="thumbnail-5">
+          <a href="single.html">
+            <img src="assets/img/480x320/480x320-2.jpg" alt="" class="card-img img-fluid">
+          </a>
+        </div>
+        <div class="card-img-overlay-bottom">
+          <h3 class="card-title"><a href="single.html">在新三板收益率达126%，秘诀是这三套模型</a></h3>
           <p class="card-text entry-meta small"><a href="author.html">mxy</a> 2017年4月10日</p>
         </div>
       </div>
-      <div class="card border-0 mb-3">
-        <img src="assets/img/320x200/320x200-j17.jpg" alt="">
-        <div class="card-block plr-0">
-          <h3 class="card-title">在新三板收益率达126%，秘诀是这三套模型</h3>
-          <p class="card-text text-muted">同系资本到底有什么投资秘诀？</p>
+      <div class="card posts-card card-inverse mb-3">
+        <div class="thumbnail-5">
+          <a href="single.html"><img src="assets/img/480x320/480x320-1.jpg" alt="" class="card-img img-fluid"></a>
+        </div>
+        <div class="card-img-overlay-bottom">
+          <h3 class="card-title"><a href="single.html">在新三板收益率达126%，秘诀是这三套模型</a></h3>
           <p class="card-text entry-meta small"><a href="author.html">mxy</a> 2017年4月10日</p>
         </div>
       </div>
     </div>
-    <div class="col-lg-4">
-      <div class="card">
-        <div class="card-header bg-info card-inverse">头条</div>
-        <div class="card-block">
+    <div class="col-lg-7">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="card">
+            <div class="card-header bg-info card-inverse">头条</div>
+            <div class="card-block">
+              <div class="card border-0">
+                <img src="assets/img/320x200/320x200-j10.jpg" alt="">
+                <div class="card-block plr-0">
+                  <h3 class="card-title">在新三板收益率达126%，秘诀是这三套模型</h3>
+                  <p class="card-text text-muted">同系资本到底有什么投资秘诀？</p>
+                  <p class="card-text entry-meta small"><a href="author.html">mxy</a> 2017年4月10日</p>
+                </div>
+              </div>
+              <ul class="list-unstyled">
+                <li class="media cat-post">
+                  <a class="d-flex mr-2" href="#">
+                    <div class="thumbnail-1">
+                      <img src="assets/img/320x200/320x200-j2.jpg" alt="300x200">
+                    </div>
+                  </a>
+                  <div class="media-body">
+                    <h4 class="media-heading"><a href="single.html">瞄准近千亿农业植保市场，弧光航空欲用大载荷直升机实现农业机械化</a></h4>
+                  </div>
+                </li>
+                <li class="media cat-post">
+                  <a class="d-flex mr-2" href="#">
+                    <div class="thumbnail-1">
+                      <img src="assets/img/320x200/320x200-j3.jpg" alt="300x200">
+                    </div>
+                  </a>
+                  <div class="media-body text-muted">
+                    <h4 class="media-heading"><a href="single.html">马云、李彦宏隔空对战“人工智能”，马化腾如何点评？</a></h4>
+                  </div>
+                </li>
+                <li class="media cat-post">
+                  <a class="post-thumbnail d-flex mr-2" href="#">
+                    <div class="thumbnail-1">
+                      <img src="assets/img/320x200/320x200-j4.jpg" alt="300x200">
+                    </div>
+                  </a>
+                  <div class="media-body text-muted">
+                    <h4 class="media-heading"><a href="single.html">弧光航空欲用大载荷直升机实现农业机械化</a></h4>
+                  </div>
+                </li>
+                <li class="media cat-post">
+                  <a class="post-thumbnail d-flex mr-2" href="#">
+                    <div class="thumbnail-1">
+                      <img src="assets/img/320x200/320x200-j5.jpg" alt="300x200">
+                    </div>
+                  </a>
+                  <div class="media-body text-muted">
+                    <h4 class="media-heading"><a href="single.html">瞄准近千亿农业植保市场</a></h4>
+                  </div>
+                </li>
+                <li class="media cat-post">
+                  <a class="post-thumbnail d-flex mr-2" href="#">
+                    <div class="thumbnail-1">
+                      <img src="assets/img/320x200/320x200-j6.jpg" alt="300x200">
+                    </div>
+                  </a>
+                  <div class="media-body text-muted">
+                    <h4 class="media-heading"><a href="single.html">瞄准近千亿农业植保市场，弧光航空欲用大载荷直升机实现农业机械化</a></h4>
+                  </div>
+                </li>
+                <li class="media cat-post">
+                  <a href="#" class="post-thumbnail d-flex mr-2">
+                    <div class="thumbnail-1">
+                      <img src="assets/img/320x200/320x200-j7.jpg" alt="300x200">
+                    </div>
+                  </a>
+                  <div class="media-body text-muted">
+                    <h4 class="media-heading"><a href="single.html">瞄准近千亿农业植保市场，航空欲用大载荷直升机实现农业机械化</a></h4>
+                  </div>
+                </li>
+                <li class="media cat-post">
+                  <a href="#" class="post-thumbnail d-flex mr-2">
+                    <div class="thumbnail-1">
+                      <img src="assets/img/320x200/320x200-j8.jpg" alt="300x200">
+                    </div>
+                  </a>
+                  <div class="media-body text-muted">
+                    <h4 class="media-heading"><a href="single.html">瞄准近千亿农业植保市升机实现农业机械化</a></h4>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+
+          <div class="ad mb-3">
+            <img src="assets/img/765x315/765x315-4.jpg" alt="" class="img-fluid">
+          </div>
           <div class="card border-0">
-            <img src="assets/img/320x200/320x200-j10.jpg" alt="">
+            <a href="single.html">
+              <img src="assets/img/480x320/480x320-2.jpg" alt="" class="card-img img-fluid">
+            </a>
             <div class="card-block plr-0">
               <h3 class="card-title">在新三板收益率达126%，秘诀是这三套模型</h3>
-              <p class="card-text text-muted">同系资本到底有什么投资秘诀？</p>
               <p class="card-text entry-meta small"><a href="author.html">mxy</a> 2017年4月10日</p>
             </div>
           </div>
-          <ul class="list-unstyled">
-            <li class="media cat-post">
-              <a class="d-flex mr-2" href="#">
-                <div class="img-box-tiny">
-                  <img src="assets/img/320x200/320x200-j2.jpg" alt="300x200">
-                </div>
-              </a>
-              <div class="media-body">
-                <h4 class="media-heading"><a href="single.html">瞄准近千亿农业植保市场，弧光航空欲用大载荷直升机实现农业机械化</a></h4>
-              </div>
-            </li>
-            <li class="media cat-post">
-              <a class="d-flex mr-2" href="#">
-                <div class="img-box-tiny">
-                  <img src="assets/img/320x200/320x200-j3.jpg" alt="300x200">
-                </div>
-              </a>
-              <div class="media-body text-muted">
-                <h4 class="media-heading"><a href="single.html">马云、李彦宏隔空对战“人工智能”，马化腾如何点评？</a></h4>
-
-              </div>
-            </li>
-            <li class="media cat-post">
-              <a class="post-thumbnail d-flex mr-2" href="#">
-                <div class="img-box-tiny">
-                  <img src="assets/img/320x200/320x200-j4.jpg" alt="300x200">
-                </div>
-              </a>
-              <div class="media-body text-muted">
-                <h4 class="media-heading"><a href="single.html">弧光航空欲用大载荷直升机实现农业机械化</a></h4>
-              </div>
-            </li>
-            <li class="media cat-post">
-              <a class="post-thumbnail d-flex mr-2" href="#">
-                <div class="img-box-tiny">
-                  <img src="assets/img/320x200/320x200-j5.jpg" alt="300x200">
-                </div>
-              </a>
-              <div class="media-body text-muted">
-                <h4 class="media-heading"><a href="single.html">瞄准近千亿农业植保市场</a></h4>
-              </div>
-            </li>
-            <li class="media cat-post">
-              <a class="post-thumbnail d-flex mr-2" href="#">
-                <div class="img-box-tiny">
-                  <img src="assets/img/320x200/320x200-j6.jpg" alt="300x200">
-                </div>
-              </a>
-              <div class="media-body text-muted">
-                <h4 class="media-heading"><a href="single.html">瞄准近千亿农业植保市场，弧光航空欲用大载荷直升机实现农业机械化</a></h4>
-              </div>
-            </li>
-            <li class="media cat-post">
-              <a href="#" class="post-thumbnail d-flex mr-2">
-                <div class="img-box-tiny">
-                  <img src="assets/img/320x200/320x200-j7.jpg" alt="300x200">
-                </div>
-              </a>
-              <div class="media-body text-muted">
-                <h4 class="media-heading"><a href="single.html">瞄准近千亿农业植保市场，航空欲用大载荷直升机实现农业机械化</a></h4>
-              </div>
-            </li>
-            <li class="media cat-post">
-              <a href="#" class="post-thumbnail d-flex mr-2">
-                <div class="img-box-tiny">
-                  <img src="assets/img/320x200/320x200-j8.jpg" alt="300x200">
-                </div>
-              </a>
-              <div class="media-body text-muted">
-                <h4 class="media-heading"><a href="single.html">瞄准近千亿农业植保市升机实现农业机械化</a></h4>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3">
-
-      <div class="ad mb-3">
-        <img src="assets/img/765x315/765x315-4.jpg" alt="" class="img-fluid">
-      </div>
-      <div class="card border-0">
-        <img src="assets/img/320x200/320x200-j21.jpg" alt="" class="img-fluid">
-        <div class="card-block plr-0">
-          <h3 class="card-title">在新三板收益率达126%，秘诀是这三套模型</h3>
-          <p class="card-text entry-meta small"><a href="author.html">mxy</a> 2017年4月10日</p>
-        </div>
-      </div>
-      <div class="card border-0">
-        <img src="assets/img/320x200/320x200-j23.jpg" alt="" class="img-fluid">
-        <div class="card-block plr-0">
-          <h3 class="card-title">在新三板收益率达126%，秘诀是这三套模型</h3>
-          <p class="card-text entry-meta small"><a href="author.html">mxy</a> 2017年4月10日</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-6">
           <div class="card border-0">
-            <img src="assets/img/320x200/320x200-j21.jpg" alt="" class="img-fluid">
-            <p class="card-title mt-1"><a href="single.html">在新三板收益率达126%，秘诀是这三套模型</a></p>
+            <a href="single.html">
+              <img src="assets/img/480x320/480x320-1.jpg" alt="" class="card-img img-fluid">
+            </a>
+            <div class="card-block plr-0">
+              <h3 class="card-title">在新三板收益率达126%，秘诀是这三套模型</h3>
+              <p class="card-text entry-meta small"><a href="author.html">mxy</a> 2017年4月10日</p>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="card border-0">
-            <img src="assets/img/320x200/320x200-j22.jpg" alt="" class="img-fluid">
-            <p class="card-title mt-1"><a href="single.html">在新三板收益率达126%，秘诀是这三套模型</a></p>
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="card border-0">
+                <a href="single.html">
+                  <img src="assets/img/480x320/480x320-2.jpg" alt="" class="card-img img-fluid">
+                </a>
+                <p class="card-title mt-1"><a href="single.html">在新三板收益率达126%，秘诀是这三套模型</a></p>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="card border-0">
+                <a href="single.html">
+                  <img src="assets/img/480x320/480x320-2.jpg" alt="" class="card-img img-fluid">
+                </a>
+                <p class="card-title mt-1"><a href="single.html">在新三板收益率达126%，秘诀是这三套模型</a></p>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="card border-0">
+                <img src="assets/img/320x200/320x200-j23.jpg" alt="" class="img-fluid">
+                <p class="card-title mt-1"><a href="single.html">在新三板收益率达126%，秘诀是这三套模型</a></p>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="card border-0">
+                <img src="assets/img/320x200/320x200-j24.jpg" alt="" class="img-fluid">
+                <p class="card-title mt-1"><a href="single.html">在新三板收益率达126%，秘诀是这三套模型</a></p>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="card border-0">
-            <img src="assets/img/320x200/320x200-j23.jpg" alt="" class="img-fluid">
-            <p class="card-title mt-1"><a href="single.html">在新三板收益率达126%，秘诀是这三套模型</a></p>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="card border-0">
-            <img src="assets/img/320x200/320x200-j24.jpg" alt="" class="img-fluid">
-            <p class="card-title mt-1"><a href="single.html">在新三板收益率达126%，秘诀是这三套模型</a></p>
-          </div>
-        </div>
-      </div>
 
 
-    </div>
-  </div>
+        </div>
+      </div> <!--./ row -->
+    </div> <!--./ col -->
+
+  </div> <!--./ row -->
 
   <div class="card-deck mb-3">
 
       <div class="card border-0">
-        <img src="assets/img/320x200p/320x200-p1.png" alt="" class="card-img-top">
+        <img src="assets/img/320x200p/320x200-p1.png" alt="" class="card-img-top img-fluid">
         <div class="card-block plr-0">
           <h2 class="card-title">浅谈博客该如何定位</h2>
           <p class="card-text">其实这篇文章是我2012年写的，距今已经很久了。</p>
@@ -277,7 +293,7 @@
       </div>
 
       <div class="card border-0">
-        <img src="assets/img/320x200p/320x200-p2.png" alt="" class="card-img-top">
+        <img src="assets/img/320x200p/320x200-p2.png" alt="" class="card-img-top img-fluid">
         <div class="card-block plr-0">
           <h2 class="card-title">浅谈博客该如何定位</h2>
           <p class="card-text">其实这篇文章是我2012年写的，距今已经很久了。其实这篇文章是我2012年写的，距今已经很久了。</p>
@@ -294,7 +310,7 @@
       </div>
 
       <div class="card border-0">
-        <img src="assets/img/320x200p/320x200-p3.png" alt="" class="card-img-top">
+        <img src="assets/img/320x200p/320x200-p3.png" alt="" class="card-img-top img-fluid">
         <div class="card-block plr-0">
           <h2 class="card-title">浅谈博客该如何定位</h2>
           <p class="card-text">其实这篇文章是我2012年写的，距今已经很久了。</p>
