--- a/index.html
+++ b/index.html
@@ -6,51 +6,103 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/index.css">
 </head>
-<body class="home front-page">
+<body class="home">
 
+  <header>
+    <div class="topbar">
+      <div class="container">
+        <p class="text-right">销售咨询 1010 9099    |    售后服务 400 686 9009</p>
+      </div>
+    </div>
+    <nav class="navbar navbar-default" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><img src="assets/img/tinet_logo.png" alt=""></a>
+        </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">首页</a></li>
+            <li><a href="#">产品</a></li>
+            <li><a href="#">应用</a></li>
+            <li><a href="#">案例</a></li>
+            <li><a href="#">服务</a></li>
+            <li><a href="#">关于</a></li>
+          </ul>
+
+          <div class="nav navbar-nav navbar-right">
+            <a href="#" class="btn btn-warning navbar-btn">免费试用</a>
+            <a href="#" class="btn btn-default navbar-btn">登陆</a>
+          </div>
+
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+  </header>
 
   <!-- 上面是复用的头部 -->
 
-  <!--./ Carousel start  -->
-  <div id="myCarousel" class="carousel slide mb-3" data-ride="carousel">
+  <div id="homeMainCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#homeMainCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#homeMainCarousel" data-slide-to="1"></li>
+      <li data-target="#homeMainCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-      <div class="carousel-item active">
-        <div class="container">
-          <div class="jumbotron">
-            <h2 class="display-4 strong">高品质呼叫中心的奥秘</h1>
-            <p>让企业与客户的沟通从此变得“专业，可信赖”！</p>
-            <a href="/why-us" class="btn btn-warning">了解更多</a>
-          </div>
+      <div class="item active">
+        <img src="assets/img/bg_header0.jpg" alt="" class="img-responsive">
+        <div class="carousel-caption">
+          <h2>高品质呼叫中心的奥秘</h2>
+          <p>让企业与客户的沟通从此变得“专业，可信赖”！</p>
+          <a href="#" class="btn btn-default">了解更多</a>
+        </div>
+      </div>
+      <div class="item">
+        <img src="assets/img/bg_header1.jpg" alt="" class="img-responsive">
+        <div class="carousel-caption">
+          <h2 class="display-4 strong">呼叫中心集成化运营</h1>
+          <p>云平台 软件开发 资源整合 运营与服务</p>
+          <a href="#" class="btn btn-default">了解更多</a>
         </div>
       </div>
 
-      <div class="carousel-item">
-        <div class="container">
-          <div class="jumbotron">
-            <h2 class="display-4 strong">呼叫中心集成化运营</h1>
-            <p>云平台 软件开发 资源整合 运营与服务</p>
-            <a href="/why-us" class="btn btn-warning">了解更多</a>
-          </div>
+      <div class="item">
+        <img src="assets/img/bg_header2.jpg" alt="" class="img-responsive">
+        <div class="carousel-caption">
+          <h2 class="display-4 strong">大中型企业的客户沟通之道</h1>
+          <p>高品质的产品和服务来自高品质客户的苛刻要求</p>
+          <a href="#" class="btn btn-default">了解更多</a>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="container">
-          <div class="jumbotron">
-            <h2 class="display-4 strong">大中型企业的客户沟通之道</h1>
-            <p>高品质的产品和服务来自高品质客户的苛刻要求</p>
-            <a href="/why-us" class="btn btn-warning">了解更多</a>
-          </div>
-        </div>
-      </div>
+
     </div>
 
-  </div><!--./ carousel end -->
+    <!-- Controls -->
+    <a class="left carousel-control" href="#homeMainCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#homeMainCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
 
   <div class="container">
     <div class="row">
